--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "vlucas/phpdotenv": "^5.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "bamarni/composer-bin-plugin": "^1.4"
     },
     "autoload": {
         "psr-4": {
